feat: migração completa para arquitetura de payment processors
🏗️ **Mudanças na Infraestrutura:**
- Refatoração completa do docker-compose.yml para uso de payment processors externos
- Substituição da arquitetura API+Database por templates reutilizáveis
- Implementação de dual payment processors (default + fallback)
- Configuração de networks isoladas para melhor segurança

🔧 **Configurações Docker:**
- Template payment-processor com resource limits (1.5 CPU, 100MB RAM)
- Template payment-processor-db com PostgreSQL 17-alpine (1.5 CPU, 250MB RAM)
- Payment-processor-1: porta 8001, taxa 5%, timeout 5s
- Payment-processor-2: porta 8002, taxa 15%, timeout 5s
- Databases dedicadas para cada processor

📝 **Backend (Spring Boot):**
- Adicionado RinhaBackend2025Application.java (aplicação principal)
- Atualizações no PaymentController para integração com processors
- Melhorias no PaymentRequest DTO
- Aprimoramentos no PaymentProcessingService
- Atualizações no Dockerfile e pom.xml

🛠️ **Configuração do Ambiente:**
- Adicionado .vscode/settings.json para configuração do workspace
- Criado .gitignore para ignorar arquivos compilados e logs
- Exclusão dos arquivos target/ e logs do controle de versão

💡 **Benefícios:**
- Arquitetura mais resiliente com fallback automático
- Melhor isolamento de recursos e networks
- Configuração baseada em templates para facilitar manutenção
- Preparação para ambiente de produção da Rinha de Backend

--- a/backend/rinha-backend-2025/Dockerfile
+++ b/backend/rinha-backend-2025/Dockerfile
@@ -1,13 +1,13 @@
-# Estágio 1: Build da aplicação com Maven
-FROM maven:3.8.5-openjdk-17 AS build
+# Estágio de build
+FROM maven:3.9.6-eclipse-temurin-21-alpine AS build
 WORKDIR /app
 COPY pom.xml .
 COPY src ./src
 RUN mvn clean package -DskipTests
 
-# Estágio 2: Criação da imagem final, leve
-FROM openjdk:17-jdk-slim
+# Estágio final da imagem
+FROM eclipse-temurin:21-jre-alpine
 WORKDIR /app
-COPY --from=build /app/target/*.jar app.jar
+COPY --from=build /app/target/rinha-backend-2025-0.0.1-SNAPSHOT.jar .
 EXPOSE 9999
-ENTRYPOINT ["java","-jar","app.jar"]
+CMD ["java", "-jar", "rinha-backend-2025-0.0.1-SNAPSHOT.jar"]
