--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,85 +1,76 @@
-
-services:
-  # O desafio exige no mínimo 2 instâncias da sua API
-  api1: &api
-    build:
-      context: ./backend/rinha-backend-2025
-      dockerfile: Dockerfile
-    hostname: api1
-    depends_on:
-      db:
-        condition: service_healthy
+x-service-templates:
+  payment-processor: &payment-processor
+    image: ./backend/rinha-backend-2025/Dockerfile
     networks:
-      - rinha-net
-      - payment-processor-net # Rede externa dos processadores
-    environment:
-      - SPRING_R2DBC_URL=r2dbc:postgresql://db:5432/rinha
-      - SPRING_R2DBC_USERNAME=rinha
-      - SPRING_R2DBC_PASSWORD=rinha
-      - RINHA_PROCESSOR_DEFAULT_URL=http://payment-processor-default:8080
-      - RINHA_PROCESSOR_FALLBACK_URL=http://payment-processor-fallback:8080
-      - RINHA_HEALTHCHECK_DEFAULT_URL=http://payment-processor-default:8080/payments/service-health
+      - payment-processor
+      - payment-processor-db
     deploy:
       resources:
         limits:
-          cpus: "0.5"
-          memory: "100MB"  # <-- AJUSTADO
+          cpus: "1.5"
+          memory: "100MB"
 
-  api2:
-    <<: *api # Reutiliza a configuração da api1
-    hostname: api2
-    deploy:                 # <-- É necessário repetir o deploy para o segundo serviço
-      resources:
-        limits:
-          cpus: "0.5"
-          memory: "100MB"  # <-- AJUSTADO
-
-  # Load Balancer para distribuir a carga entre as APIs
-  nginx:
-    image: nginx:latest
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
-    depends_on:
-      - api1
-      - api2
-    ports:
-      - "9999:9999" # Porta que o teste da Rinha vai chamar
+  payment-processor-db: &payment-processor-db
+    image: postgres:17-alpine
     networks:
-      - rinha-net
-    deploy:
-      resources:
-        limits:
-          cpus: "0.2"
-          memory: "20MB"
-
-  # Banco de dados da sua aplicação
-  db:
-    image: postgres:16-alpine
-    hostname: db
-    environment:
-      - POSTGRES_DB=rinha
-      - POSTGRES_USER=rinha
-      - POSTGRES_PASSWORD=rinha
-    ports:
-      - "5432:5432"
+      - payment-processor-db
     volumes:
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
-    networks:
-      - rinha-net
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U rinha -d rinha"]
-      interval: 5s
-      timeout: 5s
-      retries: 5
+    environment:
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_DB=rinha
     deploy:
       resources:
         limits:
-          cpus: "0.3"
-          memory: "110MB" # <-- AJUSTADO
+          cpus: "1.5"
+          memory: "250MB"
+
+services:
+  payment-processor-1:
+    <<: *payment-processor
+    container_name: payment-processor-default
+    hostname: payment-processor-default
+    environment:
+      - TRANSACTION_FEE=0.05
+      - RATE_LIMIT_SECONDS=5
+      - INITIAL_TOKEN=123
+      - DB_CONNECTION_STRING=Host=payment-processor-default-db;Port=5432;Database=rinha;Username=postgres;Password=postgres;Minimum Pool Size=15;Maximum Pool Size=20;Connection Pruning Interval=3
+    ports:
+      - 8001:8080
+    depends_on:
+      - payment-processor-db-1
+
+  payment-processor-db-1:
+    <<: *payment-processor-db
+    container_name: payment-processor-default-db
+    hostname: payment-processor-default-db
+
+  payment-processor-2:
+    <<: *payment-processor
+    container_name: payment-processor-fallback
+    hostname: payment-processor-fallback
+    environment:
+      - TRANSACTION_FEE=0.15
+      - RATE_LIMIT_SECONDS=5
+      - INITIAL_TOKEN=123
+      - DB_CONNECTION_STRING=Host=payment-processor-fallback-db;Port=5432;Database=rinha;Username=postgres;Password=postgres;Minimum Pool Size=15;Maximum Pool Size=20;Connection Pruning Interval=3
+    ports:
+      - 8002:8080
+    networks:
+      - payment-processor
+      - payment-processor-db
+    depends_on:
+      - payment-processor-db-2
+
+  payment-processor-db-2:
+    <<: *payment-processor-db
+    container_name: payment-processor-fallback-db
+    hostname: payment-processor-fallback-db
 
 networks:
-  rinha-net:
+  payment-processor:
+    name: payment-processor
     driver: bridge
-  payment-processor-net:
-    external: true
-    name: payment-processor_payment-processor
+  payment-processor-db:
+    driver: bridge
