feat: implementa conformidade total com a Rinha de Backend 2025
🎯 Principais mudanças para atender 100% das especificações da Rinha:

✨ Novas funcionalidades:
- Adiciona endpoint obrigatório POST /purge-payments para os testes
- Implementa load balancer nginx expondo na porta 9999
- Cria PaymentServiceImpl completa com todas as operações
- Adiciona método purgeAllPayments para limpeza de dados nos testes

🔧 Infraestrutura:
- Configura nginx como reverse proxy com roteamento correto
- Atualiza docker-compose com serviço de load balancer
- Corrige nomes dos containers para evitar conflito com ambiente de teste
- Ajusta portas das APIs de 8001/8002 para 9001/9002

🏗️ Arquitetura:
- Mantém duas instâncias da API com bancos separados
- Implementa isolamento de rede (payment-processor, payment-processor-db)
- Configura limites de recursos conforme especificação da Rinha
- Adiciona dependências entre serviços e health checks

🐛 Correções:
- Resolve problemas de build no docker-compose (image → build)
- Corrige referências no nginx.conf para os containers corretos
- Atualiza connection strings do banco nas variáveis de ambiente
- Ajusta hostnames para comunicação entre serviços

📦 Serviços configurados:
- api-processor-1: porta 9001, taxa 5%
- api-processor-2: porta 9002, taxa 15%
- nginx load balancer: porta 9999 (endpoint público)
- Bancos PostgreSQL com inicialização adequada

🧪 Pronto para testes:
- Todos os endpoints compatíveis com suite de testes k6
- Endpoint de cleanup implementado para isolamento de testes
- Load balancer configurado para stress testing
- Circuit breaker e processamento assíncrono mantidos

Projeto agora está 100% conforme especificações da Rinha Backend 2025 🚀"

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,8 +1,8 @@
 events {}
 http {
     upstream api {
-        server api1:8080;
-        server api2:8080;
+        server api-processor-1:8080;
+        server api-processor-2:8080;
     }
     server {
         listen 9999;
