--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,7 +39,7 @@ services:
       - INITIAL_TOKEN=123
       - DB_CONNECTION_STRING=Host=rinha-api-db-1;Port=5432;Database=rinha;Username=postgres;Password=postgres;Minimum Pool Size=15;Maximum Pool Size=20;Connection Pruning Interval=3
     ports:
-      - 8001:8080
+      - 9001:8080
     depends_on:
       - api-processor-db-1
 
@@ -58,7 +58,7 @@ services:
       - INITIAL_TOKEN=123
       - DB_CONNECTION_STRING=Host=rinha-api-db-2;Port=5432;Database=rinha;Username=postgres;Password=postgres;Minimum Pool Size=15;Maximum Pool Size=20;Connection Pruning Interval=3
     ports:
-      - 8002:8080
+      - 9002:8080
     networks:
       - payment-processor
       - payment-processor-db
@@ -69,6 +69,24 @@ services:
     <<: *payment-processor-db
     container_name: rinha-api-db-2
     hostname: rinha-api-db-2
+
+  nginx:
+    image: nginx:latest
+    container_name: rinha-nginx-lb
+    ports:
+      - "9999:9999"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - api-processor-1
+      - api-processor-2
+    networks:
+      - payment-processor
+    deploy:
+      resources:
+        limits:
+          cpus: "0.2"
+          memory: "20MB"
 
 networks:
   payment-processor:
